[tool.poetry]
name = "ynab"
version = "0.1.0"
description = "Tool for dealing with YNAB budget"
authors = ["Tatu Paronen <tatu.paronen@gmail.com>"]
readme = "README.md"
packages = [{include = "ynab"}]

[tool.poetry.scripts]
ynab = "ynab.main:run_app"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "*"
tomli = {version = "*", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"